--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Merit Ghodrat</h1>
-        <p class="section__text__p2">Computational Scientist</p>
+        <p class="section__text__p2">Undergraduate Student</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p> 6 Months<br />Data Engineer @ Lightbox</p>
+              <p> 2 Months<br />Data Engineer @ Lightbox</p>
             </div>
             <div class="details-container">
               <img
@@ -100,7 +100,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p> Chemistry(A.S.) (2022)<br />Bioinformatics(B.S.) (2027)</p>
+              <p> Chemistry(A.S.) (2024)<br />Bioinformatics(B.S.) (2027)</p>
             </div>
           </div>
           <div class="text-container">
